--- a/Code/WorkSpeed.DesktopClient/Resources/DataGridStyles.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataGridStyles.xaml
@@ -29,7 +29,7 @@
     </Style>
 
     <Style TargetType="DataGridCell" x:Key="st_CenteredCell" BasedOn="{StaticResource {x:Type DataGridCell}}">
-        <Setter Property="Height" Value="24" />
+        <Setter Property="Height" Value="Auto" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="DataGridCell">
@@ -44,7 +44,7 @@
     </Style>
 
     <Style TargetType="DataGridCell" x:Key="st_VerticalCenteredCell" BasedOn="{StaticResource {x:Type DataGridCell}}">
-        <Setter Property="Height" Value="24" />
+        <Setter Property="Height" Value="Auto" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="DataGridCell">
@@ -98,7 +98,7 @@
         <Setter Property="BorderBrush" Value="{StaticResource br_MainWindow.Background}" />
         <Setter Property="Width" Value="14" />
         <Setter Property="Height" Value="14" />
-        <Setter Property="BorderThickness" Value="15,15,2,7" />
+        <Setter Property="BorderThickness" Value="14,14,2,7" />
 
     </Style>
 
