--- a/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
@@ -53,4 +53,6 @@
                   M 64 344 V 184 c 0 -22.094 17.906 -40 40 -40 h 72 v 48 l 16 -16 l 16 16 v -48 h 72 c 22.094 0 40 17.906 40 40 v 160 c 0 22.094 -17.906 40 -40 40 H 104 C 81.906 384 64 366.094 64 344 Z 
                   M 200.797 256 H 224 v 32 h 16 v -32 h 23.203 l -31.211 -38.406 L 200.797 256 Z M 128 320 v 16 h 128 v -16 H 128 Z M 120.797 256 H 144 v 32 h 16 v -32 h 23.203 l -31.211 -38.406 L 120.797 256 Z" />
 
+    <RectangleGeometry x:Key="g_Minimized" Rect="0,0,12,3" RadiusX="0.56" RadiusY="0.56" />
+
 </ResourceDictionary>
