--- a/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/Glyphs.xaml
@@ -55,4 +55,11 @@
 
     <RectangleGeometry x:Key="g_Minimized" Rect="0,0,12,3" RadiusX="0.56" RadiusY="0.56" />
 
+    <GeometryGroup x:Key="g_Maximized">
+        <PathGeometry Figures="M13.44,0H8.56A3.57,3.57,0,0,0,5,3.56V4H8V3.56A.56.56,0,0,1,8.56,3h4.88a.56.56,0,0,1,.56.56V8.44a.56.56,0,0,1-.56.56H13v3h.44A3.57,3.57,0,0,0,17,8.44V3.56A3.57,3.57,0,0,0,13.44,0Z"/>
+        <PathGeometry Figures="M9.47,4H3.53A3.53,3.53,0,0,0,0,7.53v5.94A3.53,3.53,0,0,0,3.53,17H9.47A3.53,3.53,0,0,0,13,13.47V7.53A3.53,3.53,0,0,0,9.47,4ZM10,13.47a.53.53,0,0,1-.53.53H3.53A.53.53,0,0,1,3,13.47V7.53A.53.53,0,0,1,3.53,7H9.47a.53.53,0,0,1,.53.53Z" />
+    </GeometryGroup>
+
+    <PathGeometry x:Key="g_Close" Figures="M13.82,10.87A.67.67,0,0,1,13.39,12h-3a.59.59,0,0,1-.43-.19L7,8.54,4,11.81a.59.59,0,0,1-.43.19h-3a.67.67,0,0,1-.43-1.13L4.66,6,.18,1.13A.67.67,0,0,1,.61,0h3A.59.59,0,0,1,4,.19L7,3.46,10,.19A.59.59,0,0,1,10.43,0h3a.67.67,0,0,1,.43,1.13L9.34,6Z" />
+
 </ResourceDictionary>
